overflow hidden on menu-btn container in order to prevent horizontal scroll bar on body

--- a/scss/header/_menu-btn.scss
+++ b/scss/header/_menu-btn.scss
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 2px;
+  overflow: hidden;
+  //border for testing
+  //border: 1px solid lime;
   .line {
     background-color: $color-secondary;
     width: 100%;
