--- a/scss/main.css
+++ b/scss/main.css
@@ -15,6 +15,8 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 2px;
+  overflow: hidden;
 }
 
 .menu-btn .line {
